# NeBsdiff

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sty/ne/bsdiff/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/sty/ne/bsdiff/: MainActivity.java
app/src/main/java/com/sty/ne/bsdiff/utils/: PermissionUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/sty/ne/bsdiff/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
resources/: new.apk  old.apk
